[docs] centralized bibtex file, cleared notebook outputs for cleaner diffs

--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -8,15 +8,15 @@
     "\n",
     "For users already familiar with the VAMP interface: The corresponding [API docs](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP).\n",
     "\n",
-    "VAMP is short for [V]ariational [A]pproach for [M]arkov [P]rocesses and was introduced in <cite data-cite=\"wu2020variational\">(Wu, 2020)</cite>. It can be used as linear dimensionality reduction tool and extends [TICA](tica.ipynb) in the sense that it gives rise to a systematic way to select input features as well as handles off-equilibrium data consistently.\n",
+    "VAMP is short for [V]ariational [A]pproach for [M]arkov [P]rocesses and was introduced in <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>. It can be used as linear dimensionality reduction tool and extends [TICA](tica.ipynb) in the sense that it gives rise to a systematic way to select input features as well as handles off-equilibrium data consistently.\n",
     "\n",
-    "While the VAMP model possesses methods to project data into lower dimensions, it also is equipped with scoring functions (the so-called VAMP scores), which allow ranking of features. This has been demonstrated in, e.g., <cite data-cite=\"scherer2019variational\">(Scherer, 2019)</cite>.\n",
+    "While the VAMP model possesses methods to project data into lower dimensions, it also is equipped with scoring functions (the so-called VAMP scores), which allow ranking of features. This has been demonstrated in, e.g., <cite data-cite=\"nbvamp-scherer2019variational\">(Scherer, 2019)</cite>.\n",
     "\n",
     "In order to estimate a VAMP model, a Koopman operator $\\mathcal{K}_\\tau$ is estimated, which describes conditional future expectation values for a fixed lag time $\\tau$. Its action on a function $g$ can be written as\n",
     "\n",
     "$$ \\mathcal{K}_\\tau g(x) = \\int p(y\\mid x)(y) dy = \\mathbb{E}[g(x_{t+\\tau} | x_t = x) ],$$\n",
     "\n",
-    "where $p(y \\mid x)$ is the conditional probability density that a point $y$ at time $t+\\tau$ is visited given that point $x$ was visited at time $t$. Making the ansatz that $g$ is a linear combination $g = \\sum_i w_i \\chi_i$ for some basis functions $\\chi_i$, the linear operator $\\mathcal{K}_\\tau$ can be expressed as matrix $K$. It can be shown <cite data-cite=\"wu2020variational\">(Wu, 2020)</cite>, that the dominant eigenfunctions of an SVD of the Koopman operator in a whitenend basis $\\bar K$ yields the best dynamical model for a given timeseries, which is also what is computed and projected on in estimator and model, respectively."
+    "where $p(y \\mid x)$ is the conditional probability density that a point $y$ at time $t+\\tau$ is visited given that point $x$ was visited at time $t$. Making the ansatz that $g$ is a linear combination $g = \\sum_i w_i \\chi_i$ for some basis functions $\\chi_i$, the linear operator $\\mathcal{K}_\\tau$ can be expressed as matrix $K$. It can be shown <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>, that the dominant eigenfunctions of an SVD of the Koopman operator in a whitenend basis $\\bar K$ yields the best dynamical model for a given timeseries, which is also what is computed and projected on in estimator and model, respectively."
    ]
   },
   {
@@ -163,7 +163,7 @@
    "source": [
     "## A more detailed look on the estimator\n",
     "\n",
-    "Here we follow the content presented in <cite data-cite=\"wu2020variational\">(Wu, 2020)</cite> to give some more insight into the estimator. For a complete derivation and background please consult the source itself.\n",
+    "Here we follow the content presented in <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite> to give some more insight into the estimator. For a complete derivation and background please consult the source itself.\n",
     "\n",
     "The VAMP estimator estimates a _linear_ model of the form\n",
     "\n",
@@ -179,7 +179,7 @@
     "\n",
     "which maps for given $x_t$ to the expected value of an arbitrary observable $g$ at time $t+\\tau$. This in particular means that the matrix $K$ depends on $\\mathcal{K}_\\tau$, i.e., models at different lagtimes approximate different operators and are thus not directly comparable.\n",
     "\n",
-    "One can show (Theorem 1 of <cite data-cite=\"wu2020variational\">(Wu, 2020)</cite>), that the best approximation of $K$ to $\\mathcal{K}_\\tau$ is achieved for\n",
+    "One can show (Theorem 1 of <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>), that the best approximation of $K$ to $\\mathcal{K}_\\tau$ is achieved for\n",
     "\n",
     "$$ \\bar K=\\mathrm{diag}(\\sigma_1,\\ldots,\\sigma_k), $$\n",
     "\n",
@@ -303,7 +303,7 @@
     "\n",
     "There are three different scores implemented in scikit-time:\n",
     "\n",
-    "1. The VAMP-1 score, evaluating the sum of the singular values $s = \\sum_i\\sigma_i$ <cite data-cite=\"noe2013variational\">(Noé, 2013)</cite> and <cite data-cite=\"mcgibbon2015variational\">(McGibbon, 2015)</cite>:"
+    "1. The VAMP-1 score, evaluating the sum of the singular values $s = \\sum_i\\sigma_i$ <cite data-cite=\"nbvamp-noe2013variational\">(Noé, 2013)</cite> and <cite data-cite=\"nbvamp-mcgibbon2015variational\">(McGibbon, 2015)</cite>:"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. The VAMP-2 score, evaluating the squared sum of the singular values $s = \\sum_i \\sigma_i^2$, which maximizes the kinetic variance captured by the model <cite data-cite=\"noe2015kinetic\">(Noé, 2015)</cite>. It is also directly related to the approximation error to the true Koopman operator $\\mathcal{K}_\\tau$ <cite data-cite=\"wu2020variational\">(Wu, 2020)</cite>. This is the default choice for scoring."
+    "2. The VAMP-2 score, evaluating the squared sum of the singular values $s = \\sum_i \\sigma_i^2$, which maximizes the kinetic variance captured by the model <cite data-cite=\"nbvamp-noe2015kinetic\">(Noé, 2015)</cite>. It is also directly related to the approximation error to the true Koopman operator $\\mathcal{K}_\\tau$ <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>. This is the default choice for scoring."
    ]
   },
   {
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. The VAMP-E score also relates to the approximation error to the true Koopman operator, however its computation is numerically more stable than VAMP-1 or VAMP-2, as it does not involve any matrix inversions <cite data-cite=\"wu2020variational\">(Wu, 2020)</cite>."
+    "3. The VAMP-E score also relates to the approximation error to the true Koopman operator, however its computation is numerically more stable than VAMP-1 or VAMP-2, as it does not involve any matrix inversions <cite data-cite=\"nbvamp-wu2020variational\">(Wu, 2020)</cite>."
    ]
   },
   {
@@ -407,7 +407,7 @@
    "source": [
     "## Example with position based fluids\n",
     "\n",
-    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/sktime.data.position_based_fluids.rst#sktime.data.position_based_fluids)."
+    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"nbvamp-macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/sktime.data.position_based_fluids.rst#sktime.data.position_based_fluids)."
    ]
   },
   {
@@ -457,14 +457,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajectory = pbf_simulator.simulate_oscillatory_force(n_oscillations=40, n_steps=400)"
+    "trajectory = pbf_simulator.simulate_oscillatory_force(n_oscillations=7, n_steps=400)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We visualize the first quarter of the trajectory with a matplotlib animation under a stride of 30:"
+    "We visualize the trajectory with a matplotlib animation under a stride of 30:"
    ]
   },
   {
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf_simulator.make_animation(trajectory[:len(trajectory)//4], stride=30, mode=\"scatter\", figsize=(5, 4))\n",
+    "animation = pbf_simulator.make_animation(trajectory, stride=30, mode=\"scatter\", figsize=(5, 4))\n",
     "from IPython.display import HTML\n",
     "HTML(animation.to_html5_video())"
    ]
@@ -525,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf_simulator.make_animation(kde_trajectory[:len(kde_trajectory)//4], stride=30, mode=\"contourf\", \n",
+    "animation = pbf_simulator.make_animation(kde_trajectory, stride=30, mode=\"contourf\", \n",
     "                                         n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(5, 4))\n",
     "HTML(animation.to_html5_video())"
    ]
@@ -660,10 +660,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf_simulator.make_animation([kde_trajectory[:len(kde_trajectory)//4], \n",
-    "                                forward_full[:len(kde_trajectory)//4]\n",
-    "                               ], stride=30, mode=\"contourf\", \n",
-    "                               n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(10, 4))\n",
+    "animation = pbf_simulator.make_animation([kde_trajectory, forward_full], stride=30, mode=\"contourf\", \n",
+    "                                         n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(10, 4))\n",
     "HTML(animation.to_html5_video())"
    ]
   },
@@ -699,15 +697,30 @@
    "outputs": [],
    "source": [
     "animation = pbf_simulator.make_animation(\n",
-    "    [kde_trajectory[:len(kde_trajectory)//4], forward_component0[:len(kde_trajectory)//4], \n",
-    "     forward_component1[:len(kde_trajectory)//4], forward_component0123[:len(kde_trajectory)//4]\n",
+    "    [kde_trajectory, forward_component0, \n",
+    "     forward_component1, forward_component0123\n",
     "    ], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y, nrows=2, ncols=2, \n",
     "    figsize=(10, 8), titles=[\"trajectory\", \"component 0\", \"component 1\", \"dominant components 0, 1, 2, 3\"])\n",
     "HTML(animation.to_html5_video())"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "raw_mimetype": "text/restructuredtext"
+   },
+   "source": [
+    ".. rubric:: References\n",
+    "\n",
+    ".. bibliography:: /references.bib\n",
+    "    :style: unsrt\n",
+    "    :filter: docname in docnames\n",
+    "    :keyprefix: nbvamp-"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Raw Cell Format",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
