--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -87,7 +87,7 @@
 }
 @article{noe2016commute,
   title={Commute maps: Separating slowly mixing molecular configurations for kinetic modeling},
-  author={Noe{\'e}, Frank and Banisch, Ralf and Clementi, Cecilia},
+  author={No{\'e}, Frank and Banisch, Ralf and Clementi, Cecilia},
   journal={Journal of chemical theory and computation},
   volume={12},
   number={11},
@@ -179,4 +179,117 @@
   pages={1--12},
   year={2013},
   publisher={ACM New York, NY, USA}
+}
+@article{gingold1977smoothed,
+  title={Smoothed particle hydrodynamics: theory and application to non-spherical stars},
+  author={Gingold, Robert A and Monaghan, Joseph J},
+  journal={Monthly notices of the royal astronomical society},
+  volume={181},
+  number={3},
+  pages={375--389},
+  year={1977},
+  publisher={Oxford University Press Oxford, UK}
+}
+@article{lucy1977numerical,
+  title={A numerical approach to the testing of the fission hypothesis},
+  author={Lucy, Leon B},
+  journal={The astronomical journal},
+  volume={82},
+  pages={1013--1024},
+  year={1977}
+}
+@article{wu2017variational,
+  title={Variational Koopman models: slow collective variables and molecular kinetics from short off-equilibrium simulations},
+  author={Wu, Hao and N{\"u}ske, Feliks and Paul, Fabian and Klus, Stefan and Koltai, P{\'e}ter and No{\'e}, Frank},
+  journal={The Journal of chemical physics},
+  volume={146},
+  number={15},
+  pages={154104},
+  year={2017},
+  publisher={AIP Publishing LLC}
+}
+@article{roblitz2013fuzzy,
+  title={Fuzzy spectral clustering by PCCA+: application to Markov state models and data classification},
+  author={R{\"o}blitz, Susanna and Weber, Marcus},
+  journal={Advances in Data Analysis and Classification},
+  volume={7},
+  number={2},
+  pages={147--179},
+  year={2013},
+  publisher={Springer}
+}
+@article{noe2013projected,
+  title={Projected and hidden Markov models for calculating kinetics and metastable states of complex molecules},
+  author={No{\'e}, Frank and Wu, Hao and Prinz, Jan-Hendrik and Plattner, Nuria},
+  journal={The Journal of chemical physics},
+  volume={139},
+  number={18},
+  pages={11B609\_1},
+  year={2013},
+  publisher={American Institute of Physics}
+}
+@article{metzner2009transition,
+  title={Transition path theory for Markov jump processes},
+  author={Metzner, Philipp and Sch{\"u}tte, Christof and Vanden-Eijnden, Eric},
+  journal={Multiscale Modeling \& Simulation},
+  volume={7},
+  number={3},
+  pages={1192--1219},
+  year={2009},
+  publisher={SIAM}
+}
+@article{trendelkamp2015estimation,
+  title={Estimation and uncertainty of reversible Markov models},
+  author={Trendelkamp-Schroer, Benjamin and Wu, Hao and Paul, Fabian and No{\'e}, Frank},
+  journal={The Journal of chemical physics},
+  volume={143},
+  number={17},
+  pages={11B601\_1},
+  year={2015},
+  publisher={AIP Publishing LLC}
+}
+@article{baum1967inequality,
+  title={An inequality with applications to statistical estimation for probabilistic functions of Markov processes and to a model for ecology},
+  author={Baum, Leonard E and Eagon, John Alonzo},
+  journal={Bulletin of the American Mathematical Society},
+  volume={73},
+  number={3},
+  pages={360--363},
+  year={1967}
+}
+@article{chodera2011bayesian,
+  title={Bayesian hidden Markov model analysis of single-molecule force spectroscopy: Characterizing kinetics under measurement uncertainty},
+  author={Chodera, John D and Elms, Phillip and No{\'e}, Frank and Keller, Bettina and Kaiser, Christian M and Ewall-Wice, Aaron and Marqusee, Susan and Bustamante, Carlos and Hinrichs, Nina Singhal},
+  journal={arXiv preprint arXiv:1108.1430},
+  year={2011}
+}
+@article{olsson2017combining,
+  title={Combining experimental and simulation data of molecular processes via augmented Markov models},
+  author={Olsson, Simon and Wu, Hao and Paul, Fabian and Clementi, Cecilia and No{\'e}, Frank},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={31},
+  pages={8265--8270},
+  year={2017},
+  publisher={National Acad Sciences}
+}
+@article{noe2011dynamical,
+  title={Dynamical fingerprints for probing individual relaxation processes in biomolecular dynamics with simulations and kinetic experiments},
+  author={No{\'e}, Frank and Doose, S{\"o}ren and Daidone, Isabella and L{\"o}llmann, Marc and Sauer, Markus and Chodera, John D and Smith, Jeremy C},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={108},
+  number={12},
+  pages={4822--4827},
+  year={2011},
+  publisher={National Acad Sciences}
+}
+@article{lindner2013dynamic,
+  title={Dynamic neutron scattering from conformational dynamics. I. Theory and Markov models},
+  author={Lindner, Benjamin and Yi, Zheng and Prinz, Jan-Hendrik and Smith, Jeremy C and No{\'e}, Frank},
+  journal={The Journal of chemical physics},
+  volume={139},
+  number={17},
+  pages={11B602\_1},
+  year={2013},
+  publisher={American Institute of Physics}
 }
