[docs] transition counting

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -293,3 +293,9 @@
   year={2013},
   publisher={American Institute of Physics}
 }
+@article{noe2015statistical,
+  title={Statistical inefficiency of Markov model count matrices},
+  author={No{\'e}, Frank},
+  journal={Preprint, http://publications. mi. fu-berlin. de/1699},
+  year={2015}
+}
