[docs] msms index

--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -4,16 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with HMMs\n",
+    "# Hidden Markov Models\n",
+    "\n",
     "dfdf"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Bayesian sampling"
+   ]
   }
  ],
  "metadata": {
