--- a/docs/source/notebooks/mlmsm.ipynb
+++ b/docs/source/notebooks/mlmsm.ipynb
@@ -46,6 +46,20 @@
    "source": [
     "trajectory = msm.simulate(100000)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bayesian sampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
