--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -299,3 +299,13 @@
   journal={Preprint, http://publications. mi. fu-berlin. de/1699},
   year={2015}
 }
+@article{nuske2017markov,
+  title={Markov state models from short non-equilibrium simulations—Analysis and correction of estimation bias},
+  author={N{\"u}ske, Feliks and Wu, Hao and Prinz, Jan-Hendrik and Wehmeyer, Christoph and Clementi, Cecilia and No{\'e}, Frank},
+  journal={The Journal of Chemical Physics},
+  volume={146},
+  number={9},
+  pages={094104},
+  year={2017},
+  publisher={AIP Publishing LLC}
+}
