[docs] added clarifying and background sentence to msm index, thanks @brookehus

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -309,3 +309,20 @@
   year={2017},
   publisher={AIP Publishing LLC}
 }
+@article{husic2018markov,
+  title={Markov state models: From an art to a science},
+  author={Husic, Brooke E and Pande, Vijay S},
+  journal={Journal of the American Chemical Society},
+  volume={140},
+  number={7},
+  pages={2386--2396},
+  year={2018},
+  publisher={ACS Publications}
+}
+@book{bowman2013introduction,
+  title={An introduction to Markov state models and their application to long timescale molecular simulation},
+  author={Bowman, Gregory R and Pande, Vijay S and No{\'e}, Frank},
+  volume={797},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
