[markov/hmm] docs

--- a/docs/source/notebooks/clustering.ipynb
+++ b/docs/source/notebooks/clustering.ipynb
@@ -202,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It becomes evident that almost all of the 100 cluster centers are placed in the area of the highly populated component. This can be a disadvantage when building [Markov state models](msm.ipynb), as here one would be interested in the transition between states and this clustering only resolves the highly populated state."
+    "It becomes evident that almost all of the 100 cluster centers are placed in the area of the highly populated component. This can be a disadvantage when building [Markov state models](../index_msm.rst), as here one would be interested in the transition between states and this clustering only resolves the highly populated state."
    ]
   },
   {
