change hmm.py -> hidden_markov_model.py, doc updates

--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -8,15 +8,17 @@
     "\n",
     "For users already familiar with the interface, the [API docs](../api/index_markov.rst#sktime-markov-hmm).\n",
     "\n",
-    "Hidden markov models (HMM) are a type of markov model where the underlying markov process $X_t$ is _hidden_ and there is an _observable_ process $Y_t$ which depends on $X_t$. When fitting such a model, the goal is to parameterize a markov model over $X_t$ by observing $Y_t$. Here the dependency of $Y_t$ on $X_t$ must be immediate, i.e.,\n",
+    "Hidden markov models (HMM) are a type of markov model where the underlying markov process $X_t$ is _hidden_ and there is an _observable_ process $Y_t$ which depends on $X_t$. When fitting such a model, the goal is to parameterize a markov model over $X_t$ by observing $Y_t$. Here the dependency of $Y_t$ on $X_t$ must only depend on the current time step, i.e.,\n",
     "\n",
     "$$ \\mathbb{P}(Y_t \\in A \\mid X_1 = x_1, \\ldots, X_n = x_n) = \\mathbb{P}(Y_t \\in A \\mid X_n = x_n). $$\n",
     "\n",
-    "The states of process $X_i$ are often called \"hidden states\" or \"macro states\", whereas $\\mathbb{P}(Y_t\\in A \\mid X_n = x_n)$ is referred to as output probability or emission probability.\n",
+    "The states of process $X_i$ are often called \"hidden states\" or \"macro states\", whereas $\\mathbb{P}(Y_t\\in A \\mid X_n = x_n)$ is referred to as output probability or emission probability. If the emission probability is a discrete probability distribution, the corresponding states are often called \"observable\" or \"micro\" states.\n",
     "\n",
-    "In particular that means that - opposed to ordinary [markov state models](mlmsm.ipynb), here one hidden state maps to a probability distribution over the observable space in which $Y_t$ takes its values.\n",
+    "In particular, this means that here - as opposed to in ordinary [markov state models](mlmsm.ipynb) - one hidden state maps to a probability distribution over the observable space in which $Y_t$ takes its values.\n",
     "\n",
-    "Due to its higher-order nature, it can recover from situations and produce good results when MSMs would not, for example in some cases of bad state space discretization. However, HMMs are harder to fit, computationally more expensive, and the estimation likes to get stuck in local optima.\n",
+    "HMMs are generally more expressive as MSMs, as each MSM can be written in terms of a HMM with discrete output probabilities: The transition matrix can be used as hidden transition matrix and the emission probabilities reduce to the identity, i.e., there are as many hidden states as there are observable states and each hidden state maps to a delta distribution. HMMs relax this by allowing for other distributions too.\n",
+    "\n",
+    "Due to their more general nature, HMMs can recover from situations and produce good results when MSMs would not, for example in some cases of bad state space discretization. However, HMMs are harder to fit, computationally more expensive, and the estimation likes to get stuck in local optima.\n",
     "\n",
     "In scikit-time, a hidden markov model is determined by\n",
     "\n",
@@ -159,7 +161,7 @@
     "1. [init.discrete.metastable_from_data](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_data.rst#sktime.markov.hmm.init.discrete.metastable_from_data) or [init.discrete.metastable_from_msm](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_msm.rst#sktime.markov.hmm.init.discrete.metastable_from_msm): A reversible [MSM](mlmsm.ipynb) is estimated from given discrete trajectories. This is optional in case the MSM is already available. Then, the estimated transition matrix $P\\in\\mathbb{R}^{n\\times n}$ is coarse-grained with PCCA+ <cite data-cite=\"nbhmm-roblitz2013fuzzy\">(Röblitz, 2013)</cite>, yielding $m$ hidden states and a membership matrix $M\\in\\mathbb{R}^{n\\times m}$. The transition matrix is projected into hidden space via\n",
     "    $$ P_\\mathrm{coarse} = (M^\\top M)^{-1}M^\\top PM. $$\n",
     "    This procedure is described in greater detail in <cite data-cite=\"nbhmm-noe2013projected\">(Noé, 2013)</cite>.\n",
-    "2. [init.discrete.random](../api/generated/sktime.markov.hmm.init.discrete.random.rst#sktime.markov.hmm.init.discrete.random): Initializes hidden transition matrix and initial distribution uniformly, the emission probabilities are drawn from $\\mathcal{U}(0, 1)$ and normalized to form a row-stochastic matrix."
+    "2. [init.discrete.random_guess](../api/generated/sktime.markov.hmm.init.discrete.random_guess.rst#sktime.markov.hmm.init.discrete.random_guess): Initializes hidden transition matrix and initial distribution uniformly, the emission probabilities are drawn from $\\mathcal{U}(0, 1)$ and normalized to form a row-stochastic matrix."
    ]
   },
   {
@@ -175,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_hmm_random = hmm.init.discrete.random(n_observation_states=3, n_hidden_states=2)\n",
+    "init_hmm_random = hmm.init.discrete.random_guess(n_observation_states=3, n_hidden_states=2)\n",
     "hmm_est_random = hmm.MaximumLikelihoodHMSM(\n",
     "    initial_model=init_hmm_random\n",
     ").fit(observation_trajectory).fetch_model()"
@@ -376,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
