fix setup structure

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -326,3 +326,13 @@
   year={2013},
   publisher={Springer Science \& Business Media}
 }
+@article{rabiner1989tutorial,
+  title={A tutorial on hidden Markov models and selected applications in speech recognition},
+  author={Rabiner, Lawrence R},
+  journal={Proceedings of the IEEE},
+  volume={77},
+  number={2},
+  pages={257--286},
+  year={1989},
+  publisher={Ieee}
+}
