--- a/docs/source/notebooks/hmm.ipynb
+++ b/docs/source/notebooks/hmm.ipynb
@@ -8,19 +8,21 @@
     "\n",
     "For users already familiar with the interface, the [API docs](../api/index_markov.rst#sktime-markov-hmm).\n",
     "\n",
-    "Hidden markov models (HMM) are a type of markov model where the underlying markov process $X_t$ is _hidden_ and there is an _observable_ process $Y_t$ which depends on $X_t$. When fitting such a model, the goal is to parameterize a markov model over $X_t$ by observing $Y_t$. Here the dependency of $Y_t$ on $X_t$ must only depend on the current time step, i.e.,\n",
+    "Hidden Markov models (HMM) are a type of Markov model where the underlying Markov process $X_t$ is _hidden_ and there is an _observable_ process $Y_t$ which depends on $X_t$. A nice introduction into HMM theory and related algorithms can be found in <cite data-cite=\"nbhmm-rabiner1989tutorial\">(Rabiner, 1989)</cite>. When fitting such a model, the goal is to parameterize a Markov model over $X_t$ by observing $Y_t$. Here the dependency of $Y_t$ on $X_t$ must only depend on the current time step, i.e.,\n",
     "\n",
-    "$$ \\mathbb{P}(Y_t \\in A \\mid X_1 = x_1, \\ldots, X_n = x_n) = \\mathbb{P}(Y_t \\in A \\mid X_n = x_n). $$\n",
+    "$$ \\mathbb{P}(Y_t \\in A \\mid X_1 = x_1, \\ldots, X_n = x_n) = \\mathbb{P}(Y_t \\in A \\mid X_n = x_n), $$\n",
+    "\n",
+    "where $A$ is some measurable set in observation space.\n",
     "\n",
     "The states of process $X_i$ are often called \"hidden states\" or \"macro states\", whereas $\\mathbb{P}(Y_t\\in A \\mid X_n = x_n)$ is referred to as output probability or emission probability. If the emission probability is a discrete probability distribution, the corresponding states are often called \"observable\" or \"micro\" states.\n",
     "\n",
-    "In particular, this means that here - as opposed to in ordinary [markov state models](mlmsm.ipynb) - one hidden state maps to a probability distribution over the observable space in which $Y_t$ takes its values.\n",
+    "In particular, this means that here - as opposed to in ordinary [Markov state models](mlmsm.ipynb) - one hidden state maps to a probability distribution over the observable space in which $Y_t$ takes its values.\n",
     "\n",
-    "HMMs are generally more expressive as MSMs, as each MSM can be written in terms of a HMM with discrete output probabilities: The transition matrix can be used as hidden transition matrix and the emission probabilities reduce to the identity, i.e., there are as many hidden states as there are observable states and each hidden state maps to a delta distribution. HMMs relax this by allowing for other distributions too.\n",
+    "HMMs are generally more expressive as MSMs, as each MSM can be written in terms of an HMM with discrete output probabilities: The transition matrix can be used as hidden transition matrix and the emission probabilities reduce to the identity, i.e., there are as many hidden states as there are observable states and each hidden state maps to a delta distribution. HMMs relax this by allowing for other distributions too.\n",
     "\n",
     "Due to their more general nature, HMMs can recover from situations and produce good results when MSMs would not, for example in some cases of bad state space discretization. However, HMMs are harder to fit, computationally more expensive, and the estimation likes to get stuck in local optima.\n",
     "\n",
-    "In scikit-time, a hidden markov model is determined by\n",
+    "In scikit-time, a hidden Markov model is determined by\n",
     "\n",
     "- a hidden transition model $P\\in\\mathbb{R}^{n\\times n}$ (of type [MarkovStateModel](../api/generated/sktime.markov.msm.MarkovStateModel.rst#sktime.markov.msm.MarkovStateModel)) describing the hidden process,\n",
     "- an [output model](../api/generated/sktime.markov.hmm.OutputModel.rst#sktime.markov.hmm.OutputModel), which holds information on the emission probabilities,\n",
@@ -53,7 +55,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This hidden markov model has two hidden (macro) states and three output (micro) states. The initial distribution defaults to a uniform distribution, which prefers no hidden state over the other."
+    "This hidden Markov model has two hidden (macro) states and three output (micro) states. The initial distribution defaults to a uniform distribution, which prefers no hidden state over the other."
    ]
   },
   {
@@ -97,12 +99,35 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "f, (ax1, ax2) = plt.subplots(2, 1, sharex=True)\n",
+    "f = plt.figure(constrained_layout=False, figsize=(14, 4))\n",
+    "gs = f.add_gridspec(nrows=2, ncols=2)\n",
+    "ax1 = f.add_subplot(gs[0, 0])\n",
+    "ax2 = f.add_subplot(gs[1, 0])\n",
+    "ax3 = f.add_subplot(gs[:, 1])\n",
+    "\n",
     "ax1.plot(hidden_trajectory[:200])\n",
     "ax1.set_ylabel(\"macrostate\")\n",
     "ax2.plot(observation_trajectory[:200])\n",
     "ax2.set_xlabel(\"time\")\n",
-    "ax2.set_ylabel(\"microstate\");"
+    "ax2.set_ylabel(\"microstate\")\n",
+    "\n",
+    "probabilities = np.zeros((2, 3))\n",
+    "for i_hidden in range(2):\n",
+    "    for i_obs in range(3):\n",
+    "        # indices where macro state is i_hidden\n",
+    "        hidden_ix = np.argwhere(hidden_trajectory == i_hidden).flatten()\n",
+    "        subselected_obs = observation_trajectory[hidden_ix]\n",
+    "        # indices where micro state is i_obs given i_hidden\n",
+    "        obs_ix = np.argwhere(subselected_obs == i_obs).flatten()\n",
+    "        probabilities[i_hidden, i_obs] = len(obs_ix) / len(hidden_ix)\n",
+    "\n",
+    "cb = ax3.matshow(probabilities, cmap=\"Reds\")\n",
+    "ax3.xaxis.set_ticks_position('bottom')\n",
+    "ax3.set_xlabel(\"micro state\")\n",
+    "ax3.set_ylabel(\"macro state\")\n",
+    "ax3.set_title(r\"conditional probabilities $P(Y_t\\in s_\\mathrm{micro}\\mid X_t\\in s_\\mathrm{macro})$\")\n",
+    "f.colorbar(cb, ax=ax3)\n",
+    "plt.tight_layout();"
    ]
   },
   {
@@ -112,7 +137,7 @@
     "While the output probabilities in this case map to discrete values, this is not the only option. We implement\n",
     "\n",
     "- the [discrete output model](../api/generated/sktime.markov.hmm.DiscreteOutputModel.rst#sktime.markov.hmm.DiscreteOutputModel), which maps to a discrete observable space and is parameterized by a row-stochastic output probability matrix $E\\in\\mathbb{R}^{n\\times m}$, where $n$ is the number hidden and $m$ the number of observable states,\n",
-    "- and the [gaussian output model](../api/generated/sktime.markov.hmm.GaussianOutputModel.rst#sktime.markov.hmm.GaussianOutputModel), which maps to a one-dimensional output space with $m$ Gaussians, each parameterized by mean and standard deviation."
+    "- and the [Gaussian output model](../api/generated/sktime.markov.hmm.GaussianOutputModel.rst#sktime.markov.hmm.GaussianOutputModel), which maps to a one-dimensional output space with $m$ Gaussians, each parameterized by mean and standard deviation."
    ]
   },
   {
@@ -125,7 +150,7 @@
     "\n",
     "It crucially requires an initial guess for emission probabilities and hidden state transition matrix, as the optimization is prone to getting stuck in local optima. After optimization, the likelihood for a trained model is available and can be compared to models with different initial guesses.\n",
     "\n",
-    "Going back to above example, we can try to fit a HMM based on the observation trajectory for different initial guesses:"
+    "Going back to above example, we can try to fit an HMM based on the observation trajectory for different initial guesses:"
    ]
   },
   {
@@ -158,10 +183,10 @@
     "\n",
     "For discrete output models:\n",
     "\n",
-    "1. [init.discrete.metastable_from_data](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_data.rst#sktime.markov.hmm.init.discrete.metastable_from_data) or [init.discrete.metastable_from_msm](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_msm.rst#sktime.markov.hmm.init.discrete.metastable_from_msm): A reversible [MSM](mlmsm.ipynb) is estimated from given discrete trajectories. This is optional in case the MSM is already available. Then, the estimated transition matrix $P\\in\\mathbb{R}^{n\\times n}$ is coarse-grained with PCCA+ <cite data-cite=\"nbhmm-roblitz2013fuzzy\">(Röblitz, 2013)</cite>, yielding $m$ hidden states and a membership matrix $M\\in\\mathbb{R}^{n\\times m}$. The transition matrix is projected into hidden space via\n",
+    "1. [init.discrete.metastable_from_data](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_data.rst#sktime.markov.hmm.init.discrete.metastable_from_data) or [init.discrete.metastable_from_msm](../api/generated/sktime.markov.hmm.init.discrete.metastable_from_msm.rst#sktime.markov.hmm.init.discrete.metastable_from_msm): A reversible [MSM](mlmsm.ipynb) is estimated from given discrete trajectories. This is optional in case the MSM is already available. Then, the estimated transition matrix $P\\in\\mathbb{R}^{n\\times n}$ is coarse-grained with PCCA+ <cite data-cite=\"nbhmm-roblitz2013fuzzy\">(Röblitz, 2013)</cite>, yielding $m$ metastable/macro states and a membership matrix $M\\in\\mathbb{R}^{n\\times m}$. The transition matrix is projected into hidden space via\n",
     "    $$ P_\\mathrm{coarse} = (M^\\top M)^{-1}M^\\top PM. $$\n",
     "    This procedure is described in greater detail in <cite data-cite=\"nbhmm-noe2013projected\">(Noé, 2013)</cite>.\n",
-    "2. [init.discrete.random_guess](../api/generated/sktime.markov.hmm.init.discrete.random_guess.rst#sktime.markov.hmm.init.discrete.random_guess): Initializes hidden transition matrix and initial distribution uniformly, the emission probabilities are drawn from $\\mathcal{U}(0, 1)$ and normalized to form a row-stochastic matrix."
+    "2. [init.discrete.random_guess](../api/generated/sktime.markov.hmm.init.discrete.random_guess.rst#sktime.markov.hmm.init.discrete.random_guess): Initializes hidden transition matrix and initial distribution uniformly, the emission probabilities are drawn from the uniform distribution $\\mathcal{U}(0, 1)$ and normalized to form a row-stochastic matrix."
    ]
   },
   {
@@ -263,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Any quantity that can be evaluated on the hidden markov state model object can also be accessed through the posterior but equipped with uncertainties. For this, call `gather_stats` with the name of the method or quantity that should be evaluated. If the method requires arguments, they can also be provided. If it is a method of a lower-level object, it can be separated by slashes `/`:"
+    "Any quantity that can be evaluated on the hidden Markov state model object can also be accessed through the posterior but equipped with uncertainties. For this, call `gather_stats` with the name of the method or quantity that should be evaluated. If the method requires arguments, they can also be provided. If it is a method of a lower-level object, it can be separated by slashes `/`:"
    ]
   },
   {
@@ -303,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, it is possible to instantiate a bayesian HMSM estimator directly by using a previously estimated HMM:"
+    "Alternatively, it is possible to instantiate a Bayesian HMSM estimator directly by using a previously estimated HMM:"
    ]
   },
   {
